--- a/voice2gov_app/pubspec.yaml
+++ b/voice2gov_app/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   lottie: ^3.3.2
   shared_preferences: ^2.5.3
   google_fonts: ^6.3.2
+  flutter_svg: ^2.2.1
+  permission_handler: ^12.0.1
+  speech_to_text: ^7.3.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
