--- a/voice2gov_app/pubspec.yaml
+++ b/voice2gov_app/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   permission_handler: ^12.0.1
   speech_to_text: ^7.3.0
   cached_network_image: ^3.4.1
+  curved_navigation_bar: ^1.0.6
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
